--- a/.github/workflows/publish- ghcr.yml
+++ b/.github/workflows/publish- ghcr.yml
@@ -10,6 +10,6 @@ jobs:
       - uses: actions/checkout@v3
       - name: Build and publish the image
       run:
-        docker login --username gwashel --password ${{secrets.ACCESS_TOKEN}} ghcr.io
+        docker login --username gwashel --password ${secrets.ACCESS_TOKEN} ghcr.io
         docker build -t ghcr.io/gwashel/arithmetic-service:latest --file Dockerfile . 
         docker push ghcr.io/gwashel/arithmetic-service:latest
