--- a/.github/workflows/publish- ghcr.yml
+++ b/.github/workflows/publish- ghcr.yml
@@ -1,15 +1,19 @@
 name: Docker Image CI for GHCR
 
 on:
-  push
+  push:
+    branches:
+      - main
 
 jobs:
   build_and_publish:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: Build and publish the image
-      run:
-        docker login --username gwashel --password ${{secrets.ACCESS_TOKEN}} ghcr.io
-        docker build -t ghcr.io/gwashel/arithmetic-service:latest --file Dockerfile . 
-        docker push ghcr.io/gwashel/arithmetic-service:latest
+        run: |
+          docker login -u gwashel -p ${{secrets.ACCESS_TOKEN}} ghcr.io
+          docker build -t ghcr.io/gwashel/arithmetic-service:latest --file Dockerfile .
+          docker push ghcr.io/gwashel/arithmetic-service:latest
